--- a/app/views/pokemons/assigned_pokemons.html.erb
+++ b/app/views/pokemons/assigned_pokemons.html.erb
@@ -34,6 +34,11 @@
   <div>
     <img id="logo" src="https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
   </div>
+<div class="navbar">
+  <button onClick="window.location.href='/'" id="return_button">Main Page</button>
+  <button onClick="window.location.href='/pokemons'" id="return_button">Pokémon</button>
+  <button onClick="window.location.href='/trainers'" id="return_button">Trainers</button>
+</div>
   <h1>Assigned Pokémon for <%= @trainer.name %></h1>
   <h3>Total Assigned Pokémon: <%= @trainer.pokemons.count %></h3>
   <div class="pokemon-entries-container">
@@ -81,12 +86,6 @@
         </tr>
       </table>
     <% end %>
-  </div>
-  <div style="text-align: center;">
-    <button onClick="window.location.href='/'" id="return_button">Return to Main Page</button>
-  </div>
-  <div style="text-align: center;">
-    <button onClick="window.location.href='/trainers'" id="return_button">Return to Trainer Index</button>
   </div>
 </body>
 </html>
