--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -30,6 +30,11 @@
   <body>
     <div>
       <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png"><br>
+<div class="navbar">
+  <button onClick="window.location.href='/'" id="return_button">Main Page</button>
+  <button onClick="window.location.href='/pokemons'" id="return_button">Pokémon</button>
+  <button onClick="window.location.href='/trainers'" id="return_button">Trainers</button>
+</div>
     <button onClick="window.location.href='/pokemons/new'" id="big_button">ADD NEW POK&eacute;MON</button><br><br><br>
     </div>
     <div class="pokemon-entries-container">
@@ -96,9 +101,6 @@
           </tr>
         <% end %>
       </table>
-    </div>
-    <div style="text-align: center;">
-      <button onClick="window.location.href='/'" id="return_button">Return to Main Page</button>
     </div>
   </body>
 </html>
