--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -32,6 +32,11 @@ text-decoration: none;
     <div>
       <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
     </div>
+    <div class="navbar">
+      <button onClick="window.location.href='/'" id="return_button">Main Page</button>
+      <button onClick="window.location.href='/pokemons'" id="return_button">Pokémon</button>
+      <button onClick="window.location.href='/trainers'" id="return_button">Trainers</button>
+    </div>
     <div class="pokemon-entries-container">
       <table>
         <table>
@@ -87,11 +92,5 @@ text-decoration: none;
                 </form>
               </div>
         </table>
-        <div style="text-align: center;">
-          <button onClick="window.location.href='/'" id="return_button">Return to Main Page</button>
-        </div>
-        <div style="text-align: center;">
-          <button onClick="window.location.href='/pokemons'" id="return_button">Return to Pokemon Index</button>
-        </div>
       </body>
     </html>
