--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -33,6 +33,11 @@
   <img id="logo"
        src="https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
 </div>
+<div class="navbar">
+  <button onClick="window.location.href='/'" id="return_button">Main Page</button>
+  <button onClick="window.location.href='/pokemons'" id="return_button">Pokémon</button>
+  <button onClick="window.location.href='/trainers'" id="return_button">Trainers</button>
+</div>
 <button onClick="window.location.href='/trainers/new'" id="big_button">ADD NEW TRAINER</button><br><br><br>
 
 <div class="trainer-entries-container">
@@ -95,10 +100,6 @@
       </tr>
     <% end %>
   </table>
-</div>
-
-<div style="text-align: center;">
-  <button onClick="window.location.href='/'" id="return_button">Return to Main Page</button>
 </div>
 </body>
 </html>
