--- a/app/views/pokemons/assigned_pokemons.html.erb
+++ b/app/views/pokemons/assigned_pokemons.html.erb
@@ -34,11 +34,11 @@
   <div>
     <img id="logo" src="https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
   </div>
-<div class="navbar">
-  <button onClick="window.location.href='/'" id="return_button">Main Page</button>
-  <button onClick="window.location.href='/pokemons'" id="return_button">Pokémon</button>
-  <button onClick="window.location.href='/trainers'" id="return_button">Trainers</button>
-</div>
+    <div class="navbar">
+      <%= link_to 'Main Page', '/', id: 'return_button' %>
+      <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
+      <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
+    </div>
   <h1>Assigned Pokémon for <%= @trainer.name %></h1>
   <h3>Total Assigned Pokémon: <%= @trainer.pokemons.count %></h3>
   <div class="pokemon-entries-container">
