--- a/app/views/pokemons/edit.html.erb
+++ b/app/views/pokemons/edit.html.erb
@@ -6,11 +6,10 @@
   <body>
     <div>
       <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
-    </div>
     <div class="navbar">
-      <button onClick="window.location.href='/'" id="return_button">Main Page</button>
-      <button onClick="window.location.href='/pokemons'" id="return_button">Pokémon</button>
-      <button onClick="window.location.href='/trainers'" id="return_button">Trainers</button>
+      <%= link_to 'Main Page', '/', id: 'return_button' %>
+      <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
+      <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
     </div>
     <h1>Edit Pok&eacute;mon</h1>
     <div class="container">
