--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -30,11 +30,11 @@
   <body>
     <div>
       <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png"><br>
-<div class="navbar">
-  <button onClick="window.location.href='/'" id="return_button">Main Page</button>
-  <button onClick="window.location.href='/pokemons'" id="return_button">Pokémon</button>
-  <button onClick="window.location.href='/trainers'" id="return_button">Trainers</button>
-</div>
+    <div class="navbar">
+      <%= link_to 'Main Page', '/', id: 'return_button' %>
+      <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
+      <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
+    </div>
     <button onClick="window.location.href='/pokemons/new'" id="big_button">ADD NEW POK&eacute;MON</button><br><br><br>
     </div>
     <div class="pokemon-entries-container">
