--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -30,12 +30,12 @@
   <body>
     <div>
       <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png"><br>
-    <div class="navbar">
-      <%= link_to 'Main Page', '/', id: 'return_button' %>
-      <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
-      <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
-    </div>
-    <button onClick="window.location.href='/pokemons/new'" id="big_button">ADD NEW POK&eacute;MON</button><br><br><br>
+      <div class="navbar">
+        <%= link_to 'Main Page', '/', id: 'return_button' %>
+        <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
+        <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
+      </div>
+      <%= link_to 'New Pokemon', '/pokemons/new', id: 'big_button' %>
     </div>
     <div class="pokemon-entries-container">
       <table>
@@ -45,7 +45,7 @@
               <table>
                 <tr>
                   <td class="label-cell">Name:</td>
-                    <td><b><a href="/pokemons/<%= pokemon.id %>"><%= pokemon.name %></a></b></td>
+                  <td><b><a href="/pokemons/<%= pokemon.id %>"><%= pokemon.name %></a></b></td>
                 </tr>
                 <tr>
                   <td class="label-cell">Pokemon ID:</td>
@@ -85,15 +85,15 @@
                 </tr>
                 <tr>
                   <td colspan="2" style="text-align: center;">
-              <div class="button-group">
-                <a href="/pokemons/<%= pokemon.id %>/edit" class="small_button mouseover-button">Edit</a>
-                <form action="/pokemons/<%= pokemon.id %>" method="POST" onsubmit="return confirm('Are you sure you want to delete this Pokémon?');">
-                <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-                <input type="hidden" name="_method" value="DELETE">
-                <input type="hidden" name="action" value="EDIT">
-                <input type="submit" value="Delete" class="small_button mouseover-button delete-button"/>
-                </form>
-              </div>
+                    <div class="button-group">
+                      <a href="/pokemons/<%= pokemon.id %>/edit" class="small_button mouseover-button">Edit</a>
+                      <form action="/pokemons/<%= pokemon.id %>" method="POST" onsubmit="return confirm('Are you sure you want to delete this Pokémon?');">
+                        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="action" value="EDIT">
+                        <input type="submit" value="Delete" class="small_button mouseover-button delete-button"/>
+                      </form>
+                    </div>
                   </td>
                 </tr>
               </table>
