fix: changes true/false to yes/no

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -73,7 +73,13 @@
                 </tr>
                 <tr>
                   <td class="label-cell">Can Evolve:</td>
-                  <td><%= pokemon.can_evolve %></td>
+                  <td>
+                    <% if pokemon.can_evolve %>
+                      Yes
+                    <% else %>
+                      No
+                    <% end %>
+                  </td>
                 </tr>
                 <tr>
                   <td class="label-cell">Created At:</td>
