--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -1,30 +1,29 @@
 <html>
   <head>
-      <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <style>
-          .mouseover-button {
-margin-top: 10px;
-line-height: 30px;
-font-weight: bold;
-font-size: large;
-color: black;
-padding: 0 20px;
-background: lightblue;
-border: 3px solid #003060;
-border-radius: 40px;
-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
-text-decoration: none;
-}
-.mouseover-button:hover {
-background: #003060;
-color: white;
-position: relative;
-top: 3px;
-box-shadow: none;
-text-decoration: none;
-}
-</style>
+      .mouseover-button {
+      margin-top: 10px;
+      line-height: 30px;
+      font-weight: bold;
+      font-size: large;
+      color: black;
+      padding: 0 20px;
+      background: lightblue;
+      border: 3px solid #003060;
+      border-radius: 40px;
+      box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
+      text-decoration: none;
+      }
+      .mouseover-button:hover {
+      background: #003060;
+      color: white;
+      position: relative;
+      top: 3px;
+      box-shadow: none;
+      text-decoration: none;
+      }
+    </style>
     <title><%= @pokemon.name %></title>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -70,7 +69,13 @@ text-decoration: none;
           </tr>
           <tr>
             <td class="label-cell">Can Evolve:</td>
-            <td><%= @pokemon.can_evolve %></td>
+            <td>
+              <% if @pokemon.can_evolve %>
+                Yes
+              <% else %>
+                No
+              <% end %>
+            </td>
           </tr>
           <tr>
             <td class="label-cell">Created At:</td>
@@ -80,17 +85,17 @@ text-decoration: none;
             <td class="label-cell">Updated At:</td>
             <td><%= @pokemon.updated_at %></td>
           </tr>
-              <tr>
-                  <td colspan="2" style="text-align: center;">
+          <tr>
+            <td colspan="2" style="text-align: center;">
               <div class="button-group">
                 <a href="/pokemons/<%= @pokemon.id %>/edit" class="small_button mouseover-button">Edit</a>
                 <form action="/pokemons/<%= @pokemon.id %>" method="POST" onsubmit="return confirm('Are you sure you want to delete this Pokémon?');">
-                <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-                <input type="hidden" name="_method" value="DELETE">
-                <input type="hidden" name="action" value="EDIT">
-                <input type="submit" value="Delete" class="small_button mouseover-button delete-button"/>
+                  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+                  <input type="hidden" name="_method" value="DELETE">
+                  <input type="hidden" name="action" value="EDIT">
+                  <input type="submit" value="Delete" class="small_button mouseover-button delete-button"/>
                 </form>
               </div>
-        </table>
-      </body>
-    </html>
+            </table>
+          </body>
+        </html>
