--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -62,7 +62,13 @@
                 </tr>
                 <tr>
                   <td class="label-cell">Is Gym Leader:</td>
-                  <td><%= trainer.gym_leader %></td>
+                  <td>
+                    <% if trainer.gym_leader %>
+                      Yes
+                    <% else %>
+                      No
+                    <% end %>
+                  </td>
                 </tr>
                 <tr>
                   <td class="label-cell"><%= link_to 'Assigned Pokémon', "/trainers/#{trainer.id}/pokemons" %>:</td>
