Returned all files to true, false

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -73,13 +73,7 @@
                 </tr>
                 <tr>
                   <td class="label-cell">Can Evolve:</td>
-                  <td>
-                    <% if pokemon.can_evolve %>
-                      Yes
-                    <% else %>
-                      No
-                    <% end %>
-                  </td>
+                  <td><%= pokemon.can_evolve %></td>
                 </tr>
                 <tr>
                   <td class="label-cell">Created At:</td>
