--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -62,13 +62,7 @@
                 </tr>
                 <tr>
                   <td class="label-cell">Is Gym Leader:</td>
-                  <td>
-                    <% if trainer.gym_leader %>
-                      Yes
-                    <% else %>
-                      No
-                    <% end %>
-                  </td>
+                  <td><%= trainer.gym_leader %></td>
                 </tr>
                 <tr>
                   <td class="label-cell"><%= link_to 'Assigned Pokémon', "/trainers/#{trainer.id}/pokemons" %>:</td>
