--- a/app/views/trainers/new.html.erb
+++ b/app/views/trainers/new.html.erb
@@ -54,8 +54,8 @@
             <td class="label-cell"><label for="trainer_gym_leader">Gym Leader:</label></td>
             <td>
               <select name="trainer[gym_leader]" id="trainer_gym_leader" class="field-select">
-                <option value="true">Yes</option>
-                <option value="false">No</option>
+                <option value="true">true</option>
+                <option value="false">false</option>
               </select>
             </td>
           </tr>
