--- a/app/views/pokemons/edit.html.erb
+++ b/app/views/pokemons/edit.html.erb
@@ -8,7 +8,7 @@
       <img id = "logo" src = "https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png">
       <div class="navbar">
         <%= link_to 'Main Page', '/', id: 'return_button' %>
-        <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
+        <%= link_to 'Pokemon', '/pokemons', id: 'return_button' %>
         <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
       </div>
       <h1>Edit Pok&eacute;mon</h1>
