--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,8 +14,8 @@
     text-transform: uppercase;
   }
 </style>
-    <div class="navbar">
-      <%= link_to 'Main Page', '/', id: 'big_button' %>
-      <%= link_to 'Pokémon', '/pokemons', id: 'big_button' %>
-      <%= link_to 'Trainers', '/trainers', id: 'big_button' %>
-    </div>
+<div class="navbar">
+  <%= link_to 'Main Page', '/', id: 'big_button' %>
+  <%= link_to 'Pokemon', '/pokemons', id: 'big_button' %>
+  <%= link_to 'Trainers', '/trainers', id: 'big_button' %>
+</div>
