--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,7 +66,7 @@ body {
   left: 50%;
   transform: translate(-50%,-50%);
 }
-/* Poké Styles */
+/* Poke Styles */
 .pokeball {
   position: relative;
   width: 200px;
