--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -34,7 +34,7 @@
        src="https://pluspng.com/img-png/pokemon-logo-png-pokemon-logo-png-2000.png"></div>
     <div class="navbar">
       <%= link_to 'Main Page', '/', id: 'return_button' %>
-      <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
+      <%= link_to 'Pokemon', '/pokemons', id: 'return_button' %>
       <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
     </div>
     <%= link_to 'New Trainer', '/trainers/new', id: 'big_button' %>
@@ -65,7 +65,7 @@
                   <td><%= trainer.gym_leader %></td>
                 </tr>
                 <tr>
-                  <td class="label-cell"><%= link_to 'Assigned Pokémon', "/trainers/#{trainer.id}/pokemons" %>:</td>
+                  <td class="label-cell"><%= link_to 'Assigned Pokemon', "/trainers/#{trainer.id}/pokemons" %>:</td>
                   <td>
                     <% trainer.pokemons.each do |pokemon| %>
                       <%= pokemon.name %><br>
@@ -84,7 +84,7 @@
           <tr>
             <td colspan="2" style="text-align: center;">
               <div class="button-group">
-                <a href="<%= edit_trainer_path(trainer) %>" class="small_button mouseover-button">Edit</a>
+                <a href="<%= edit_trainer_path(trainer) %>" class="small_button mouseover-button">Edit Trainer</a>
                 <form action="<%= trainer_path(trainer) %>" method="POST">
                   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
                   <input type="hidden" name="_method" value="DELETE">
