--- a/app/views/trainers/new.html.erb
+++ b/app/views/trainers/new.html.erb
@@ -19,7 +19,7 @@
     </div>
     <div class="navbar">
       <%= link_to 'Main Page', '/', id: 'return_button' %>
-      <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
+      <%= link_to 'Pokemon', '/pokemons', id: 'return_button' %>
       <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
     </div>
     <h1>Add a Trainer</h1>
