--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -33,12 +33,12 @@
     </div>
     <div class="navbar">
       <%= link_to 'Main Page', '/', id: 'return_button' %>
-      <%= link_to 'Pokémon', '/pokemons', id: 'return_button' %>
+      <%= link_to 'Pokemon', '/pokemons', id: 'return_button' %>
       <%= link_to 'Trainers', '/trainers', id: 'return_button' %>
     </div>
     <tr>
       <h2>
-        <td class="label-cell">Assigned Pokémon:</td>
+        <td class="label-cell">Assigned Pokemon:</td>
         <td><%= @trainer.assigned_pokemon_count %></td>
       </h2>
     </tr>
@@ -66,7 +66,7 @@
             <td><%= @trainer.gym_leader %></td>
           </tr>
           <tr>
-            <td class="label-cell"><%= link_to 'Assigned Pokémon', "/trainers/#{@trainer.id}/pokemons" %>:</td>
+            <td class="label-cell"><%= link_to 'Assigned Pokemon', "/trainers/#{@trainer.id}/pokemons" %>:</td>
             <td>
               <% @trainer.pokemons.each do |pokemon| %>
                 <%= pokemon.name %><br>
@@ -84,7 +84,7 @@
           <tr>
             <td colspan="2" style="text-align: center;">
               <div class="button-group">
-                <a href="/trainers/<%= @trainer.id %>/edit" class="small_button mouseover-button">Edit</a>
+                <a href="/trainers/<%= @trainer.id %>/edit" class="small_button mouseover-button">Edit Trainer</a>
                 <form action="/trainers/<%= @trainer.id %>" method="POST" onsubmit="return confirm('Are you sure you want to delete this Trainer?');">
                   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
                   <input type="hidden" name="_method" value="DELETE">
